# semantikon

./: .coveragerc  .gitattributes  .gitignore  pyproject.toml
.binder/: environment.yml  postBuild
.ci_support/: environment-cwl.yml  environment.yml  lower_bound.yml  upper_bound.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: daily.yml  dependabot-pr.yml  pr-labeled.yml  pr-target-opened.yml  preview-release.yml  push-pull.yml  release.yml  weekly.yml
docs/: README.md  conf.py  environment.yml  index.rst  specs.md
notebooks/: example.ipynb  knowledge_graph.ipynb  units.ipynb
semantikon/: __init__.py  _version.py  analysis.py  api.py  converter.py  cwl.py  dataclasses.py  datastructure.py  flowrep_dict.py  flowrep_to_networkx.py  kg_to_flowrep.py  metadata.py  ontology.py  qudt.py  typing.py  visualize.py  workflow.py
semantikon/data/: qudt.ttl
tests/integration/: test_integration.py  test_vacancy_formation_energy.py
tests/static/: kinetic_energy_workflow.ttl
tests/static/cwl/: get_kinetic_energy.cwl  get_speed.cwl  kinetic_energy_workflow.cwl
tests/unit/: test_analysis.py  test_cwl.py  test_dataclass.py  test_dataclasses.py  test_datastructure.py  test_flowrep_dict.py  test_flowrep_to_networkx.py  test_kg_to_flowrep.py  test_metadata.py  test_ontology.py  test_parsers.py  test_qudt.py  test_tests.py  test_units.py  test_workflow.py
uniton/: _version.py  converter.py  typing.py
