[build-system]
requires = [
    "setuptools==80.9.0",
    "versioneer[toml]==0.29",
]
build-backend = "setuptools.build_meta"

[project]
name = "semantikon"
description = "semantikon - Ontological type system"
readme = "docs/README.md"
keywords = [ "pyiron",]
requires-python = ">=3.10, <3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "graphviz==0.21",
    "networkx==3.4.2",
    "numpy==2.2.6",
    "owlrl==7.1.3",
    "pint==0.24.4",
    "rdflib==7.1.4",
    "pyshacl==0.30.1",
    "requests===2.32.4",
    "typeguard==4.4.3",
]
dynamic = [ "version",]
authors = [
    { name = "Sam Waseda", email = "waseda@mpie.de" },
]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://pyiron.org/"
Documentation = "https://semantikon.readthedocs.io"
Repository = "https://github.com/pyiron/semantikon"

[tool.versioneer]
VCS = "git"
style = "pep440-pre"
versionfile_source = "semantikon/_version.py"
parentdir_prefix = "semantikon"
tag_prefix = "semantikon-"

[tool.setuptools.packages.find]
include = [ "semantikon*",]

[tool.setuptools.dynamic.version]
attr = "semantikon.__version__"

[tool.setuptools.package-data]
semantikon = ["data/qudt.ttl"]

[tool.mypy]
exclude = [
    "^docs/conf\\.py$",
    "^tests/",
]
ignore_missing_imports = true
strict_equality = true
non_interactive = true
install_types = true
