[build-system]
requires = [
    "hatchling==1.27.0",
    "hatch-vcs==0.5.0",
]
build-backend = "hatchling.build"

[project]
name = "semantikon"
description = "semantikon - Ontological type system"
readme = "docs/README.md"
keywords = [ "pyiron",]
requires-python = ">=3.10, <3.15"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "graphviz==0.21",
    "numpy==2.4.0",
    "owlrl==7.1.4",
    "pint==0.25.2",
    "rdflib==7.5.0",
    "pyshacl==0.31.0",
    "requests==2.32.5",
    "typeguard==4.5.0",
    "flowrep==0.1.9",
    "networkx==3.5",
]
dynamic = [ "version",]
authors = [
    { name = "Sam Waseda", email = "waseda@mpie.de" },
]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://pyiron.org/"
Documentation = "https://semantikon.readthedocs.io"
Repository = "https://github.com/pyiron/semantikon"

[tool.hatch.build]
include = [
    "semantikon"
]

[tool.hatch.build.hooks.vcs]
version-file = "semantikon/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "semantikon"
]

[tool.hatch.build.targets.wheel]
packages = [
    "semantikon"
]

[tool.hatch.version]
source = "vcs"
path = "semantikon/_version.py"


[tool.mypy]
exclude = [
    "^docs/conf\\.py$",
    "^tests/",
]
ignore_missing_imports = true
strict_equality = true
non_interactive = true
install_types = true
